[package]
name = "cio-finit"
version = "0.1.0"
authors = ["Marnix Bloeiman <programmer.marxin0810@gmail.com>"]
edition = "2018"
description = "Project CIO's first initialisation, compiles the dependency repositories and adds the binairy files that get outputted to the main repository."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
